[package]
name = "tcp2quic"
version = "0.1.0"
authors = ["zephyr <i@zephyr.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcgen = "0.8"
futures = "0.3"
tokio = {version = "1.7", features = ["rt", "net", "io-util", "macros"]}
quinn = "0.7"
rustls = { version = "0.19", features = ["dangerous_configuration", "quic"] }
webpki = "0.21"
